# Comparative-Global-AI-Regulation

./: .gitignore  README.md  pyproject.toml
papers/: edit_humanize.md  edit_humanizing-heuristics.md  main Comparative_Global_AI_Regulation__Policy_Perspectives_from_the_EU__China__and_the_US__7_.tex  multi-paper_pub-plan.md
papers/arxiv/: main.bib  main.tex
papers/arxiv/figures/: trilemma_triangle.tex
papers/ipr2026/: Makefile  arxiv-disclosure.md  edit_humanizing-heuristics.md  ipr2026_comparative-global-ai-regulation.bib  ipr2026_comparative-global-ai-regulation.tex  ipr2026_edit-humanize.md  ipr2026_edit_humanize-report-FINAL.md  ipr2026_edit_humanizing-heuristics.md  ipr2026_edit_similar-papers.md  ipr2026_similar-papers-style.md  main.tex  main_v1.tex  reference.docx  setup-texlive.sh
papers/jcp2026/: Makefile  abstract-pitch.md  cover-letter.md  edit_humanizing-heuristics.md  email-hakmeh.md  figures  jcp2026_critiques.md  jcp2026_cyber-governance-trilemma.bib  jcp2026_cyber-governance-trilemma.tex  jcp2026_edit-humanize.md  jcp2026_edit_humanize-report-FINAL.md  jcp2026_pub-plan.md  main.bib  main.docx  main.tex  submission-notes.md
